--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
       <button class="nisbutton nissmallbutton" onclick="showPage('page4')">Fruit Tree Runs</button>
       <button class="nisbutton nissmallbutton" onclick="showPage('page5')">Bush Runs</button>
       <button class="nisbutton nissmallbutton" onclick="showPage('page6')">⚙ Settings</button>
+      <!-- Farming Input -->
+      <div>
+        <input type="text" class="nisinput" placeholder="Farming Level" style="width: 100px;">
+        <button class="nisbutton2">Submit</button>
+      </div>
     </nav>
   </header>
 
