--- a/ReadStats.html
+++ b/ReadStats.html
@@ -4,58 +4,40 @@
   <meta charset="UTF-8">
   <title>Rs3 default example</title>
   <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
+  <script src="https://runeapps.org/alt1lib.js"></script>
 </head>
 <body class="nis">
 
   <!-- Main Border Container -->
   <div class="nismainborder nisborder" style="padding: 20px; position: relative;">
 
-    <!-- Exit Button -->
-    <div class="nisexitbutton" title="Close"></div>
-
-    <!-- Header Text -->
-    <div>
-    <h1 class="nistext" style="">Welcome to an NIS Styled Page</h1>
-      
-    </div>
-
-    <!-- Separator -->
-    <div class="nisseperator" style="top: 70px;"></div>
-
-    <!-- Buttons -->
-    <button class="nisbutton">Primary Button</button>
-    <button class="nisbutton nissmallbutton">Small Button</button>
-    <button class="nisbutton2">Alt Button</button>
-
-    <!-- Inputs -->
-    <input type="text" class="nisinput" placeholder="Farming Level">
-    <select class="nisdropdown">
-      <option>Dropdown Option 1</option>
-      <option>Dropdown Option 2</option>
-    </select>
-
-    <!-- Image Button -->
-    <div class="nisimgbutton" title="Image Button"></div>
-
-    <!-- Table -->
-    <table class="nistable" style="margin-top: 20px; width: 100%;">
-      <thead>
-        <tr><th>Header 1</th><th>Header 2</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>Row 1</td><td>Data</td></tr>
-        <tr><td>Row 2</td><td>Data</td></tr>
-      </tbody>
-    </table>
-
-    <!-- Scrollable Content -->
-    <div style="height: 100px; overflow-y: scroll; margin-top: 20px;">
-      <p class="nistext">This is a scrollable area. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="nistext">This is a scrollable area. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="nistext">This is a scrollable area. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p class="nistext">This is a scrollable area. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+    
 
   </div>
 </body>
+  <!-- Is it in Alt1 -->
+  <script>
+    if (!window.alt1) {
+      alert("This app must be run inside Alt1 client!");
+    }
+  </script>
+  <!-- Read User's Stats -->
+  <script>
+    function readStats() {
+      if (!alt1.permissionPixel) {
+        alert("Pixel permission not granted!");
+        return;
+      }
+
+      // Example: bind a region (x, y, width, height)
+      // You’ll need to find the coordinates for where stats are drawn on screen
+      let id = alt1.bindRegion(100, 100, 200, 50);
+
+      // Try to OCR using the 'xpcounter' or 'chat' font
+      let text = alt1.bindReadString(id, "xpcounter", 10, 20);
+      console.log("Read text:", text);
+
+      document.getElementById("output").innerText = text || "Nothing detected";
+    }
+   </script>
 </html>
