--- a/ReadStats.html
+++ b/ReadStats.html
@@ -18,7 +18,7 @@
   <!-- Is it in Alt1 -->
   <script>
     if (!window.alt1) {
-      //alert("This app must be run inside Alt1 client!");
+      alert("This app must be run inside Alt1 client!");
     }
     else
     {
