--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -20,11 +20,11 @@
     if (!window.alt1) {
       alert("This app must be run inside Alt1 client!");
     }
-    else
-    {
+    else if (window.alt1){
       alert("Alt1 Found");
     }
   </script>
+  
   <!-- Read User's Stats -->
   <script>
     function readStats() {
