--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -10,7 +10,7 @@
   <!-- Main Border Container -->
   <div class="nismainborder nisborder" style="padding: 20px; position: relative;">
     <h2>Alt1 Stats Detector</h2>
-    <img src="./statanchor.png"
+    <img src="./statanchor.png" />
     <button onclick="detectStatsWindow()">Find Stats Window</button>
     <div id="output" style="margin-top:10px; font-weight:bold; color:lime;"></div>
   </div>
