--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -12,6 +12,7 @@
     <h2>Alt1 Stats Detector</h2>
     <button onclick="startFinder()">Start Stats Finder</button>
     <div id="output" style="margin-top:10px; font-weight:bold; color:lime;"></div>
+    <div><p> "Version 0.0.1" </p></div>
   </div>
 
   <script>
